--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <title>Belajar CI/CD untuk Pemula</title>
     <style>
         body {
-            background-color: #2D2D2D;
+            background-color: #ffffff;
         }
 
         h1 {
@@ -14,7 +14,7 @@
         }
 
         p {
-            color: white;
+            color: rgb(0, 0, 0);
             font-family: "Source Code Pro", Menlo, Monaco, fixed-width;
         }
     </style>
@@ -22,12 +22,7 @@
 
 <body>
     <h1>Belajar CI/CD untuk Pemula</h1>
-    <p>Ini adalah contoh halaman HTML yang diserve melalui Golang server. Demo ini merupakan lanjutan dari video Part 1:
-        <a href="https://www.youtube.com/watch?v=v-pqoP6ro-8">belajar CI/CD pemula</a>, pastikan kamu tonton ini dulu
-        sebelum lanjut. Untuk menonton video devops, cloud, dan infrastruktur lainnya kalian bisa juga akses youtube
-        channel
-        <a href="https://www.youtube.com/user/girikuncoro">girikuncoro</a>
-    </p>
+    <p>Ini adalah contoh halaman HTML - Belajar CI/CD pemula</a></p>
 </body>
 
 </html>
