--- a/static/index.html
+++ b/static/index.html
@@ -1,28 +1,77 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-    <title>Belajar CI/CD untuk Pemula</title>
-    <style>
-        body {
-            background-color: #ffffff;
-        }
-
-        h1 {
-            color: #C26356;
-            font-size: 30px;
-            font-family: Menlo, Monaco, fixed-width;
-        }
-
-        p {
-            color: rgb(0, 0, 0);
-            font-family: "Source Code Pro", Menlo, Monaco, fixed-width;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shop Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-    <h1>Belajar CI/CD untuk Pemula</h1>
-    <p>Ini adalah contoh halaman HTML - Belajar CI/CD pemula</a></p>
-</body>
+    <header>
+        <div class="container">
+            <h1>MyShop</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <section id="home" class="hero">
+        <h2>Welcome to MyShop</h2>
+        <p>Your one-stop shop for quality products!</p>
+        <a href="#products" class="btn">Shop Now</a>
+    </section>
+
+    <section id="products">
+        <div class="container">
+            <h2>Our Products</h2>
+            <div class="product-grid">
+                <div class="product">
+                    <img src="assets/bottle.jpg" alt="Product 1">
+                    <h3>Product 1</h3>
+                    <p>Rp240.000</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+                <div class="product">
+                    <img src="assets/kaos.jpg" alt="Product 2">
+                    <h3>Product 2</h3>
+                    <p>Rp240.000</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+                <div class="product">
+                    <img src="assets/doll.jpg" alt="Product 3">
+                    <h3>Product 3</h3>
+                    <p>Rp240.000</p>
+                    <a href="#" class="btn">Buy Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>At MyShop, we offer high-quality products at affordable prices. Our mission is to provide a seamless shopping experience for all our customers.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Email: support@myshop.com</p>
+            <p>Phone: +123 456 7890</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 MyShop. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
 </html>
