--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
                     <a href="#" class="btn">Buy Now</a>
                 </div>
                 <div class="product">
-                    <img src="assets/kaos.jpg" alt="Product 2">
+                    <img src="assets/jacket.jpg" alt="Product 2">
                     <h3>Product 2</h3>
                     <p>Rp240.000</p>
                     <a href="#" class="btn">Buy Now</a>
@@ -63,7 +63,7 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>Email: support@myshop.com</p>
+            <p>Email: tiaragust@myshop.com</p>
             <p>Phone: +123 456 7890</p>
         </div>
     </section>
